# dbt-slack-notify

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/dbt_slack_notify/: __init__.py  blocks.py  cli.py  commands.py  constants.py  dbt_results.py  formatters.py  runner.py  settings.py  slack.py  state.py
tests/: conftest.py  helpers.py  test_blocks.py  test_cli.py  test_commands.py  test_dbt_results.py  test_formatters.py  test_runner.py  test_settings.py  test_slack.py  test_state.py
